Add toggle and delete items features

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,6 +1,6 @@
 <div>
     <p>
-        <input type="checkbox" />
+        <input type="checkbox" (change)="onToggle()" [checked]="task.isDone" />
         {{ task.content + " - " + (task.isDone ? "Yes" : "No") }}
     </p>
     <button
