--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,9 +1,12 @@
 <br />
 {{ tasks.length == 0 ? "You have no items" : "" }}
 <input type="button" value="Add+" (click)="addItem()" />
+
 <app-task-item
-    *ngFor="let task of tasks; let i = index"
+    *ngFor="let task of tasks; let itemIndex = index"
     [task]="task"
-    (deleteTask)="handleDeleteItem(i)"
+    [taskIndex]="itemIndex"
+    (deleteTask)="handleDeleteTask(itemIndex)"
+    (toggleTask)="handleToggleTask(itemIndex)"
 >
 </app-task-item>
