plenty of changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-{{ title }}
-
-<first-button></first-button>
-
-<app-tasks></app-tasks>
+<nav>
+    <a routerLink="/tasks" > Tasks </a> <br />
+    <a routerLink="/scheduler" > Scheduler </a>
+</nav>
+<!-- <app-tasks></app-tasks> -->
+<router-outlet></router-outlet>
