start working with yelpAPI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
     <a routerLink="/tasks" > Tasks </a> <br />
-    <a routerLink="/scheduler" > Scheduler </a>
+    <a routerLink="/scheduler" > Scheduler </a> <br />
+    <a routerLink="/yelpapi" > Yelp </a>
 </nav>
 <!-- <app-tasks></app-tasks> -->
 <router-outlet></router-outlet>
